[project]
name = "rag101"
version = "0.1.0"
description = "RAG-enhanced document query system with LangChain integration"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "chromadb>=0.5.0",
    "openai>=1.50.0",
    "anthropic>=0.30.0",
    "sentence-transformers>=3.0.0",
    "python-dotenv>=1.0.0",
    "markdown>=3.6",
    "beautifulsoup4>=4.12.0",
    "PyPDF2>=3.0.0",
    "requests>=2.32.0",
    "numpy>=1.26.0",
    "torch>=2.4.0",
    "transformers>=4.40.0",
    "langchain>=0.3.0",
    "langchain-community>=0.3.0",
    "langchain-ollama>=0.2.0",
    "langchain-chroma>=0.1.0",
    "langchain-huggingface>=0.1.0",
    "langchain-openai>=0.2.0",
    "langchain-anthropic>=0.2.0",
    "unstructured>=0.10.0",
    "matplotlib>=3.5.0",
]
